# edisondrone

./: .gitmodules  .travis.yml  CMakeLists.txt  README.rst  simulator.gnuplot
edisondrone/include/: attitude_updater.h  drone.h  gyro.h  imu.h  lsm9ds0_adapter.h  periodic-thread.h  quaternion.h  sensor-listener.h  sensor.h  server.h  thread.h  vector3f.h
edisondrone/include/sensors/: lsm9ds0.h
edisondrone/src/: attitude_updater.cc  drone.cc  gyro.cc  imu.cc  lsm9ds0_adapter.cc  main.cc  periodic-thread.cc  quaternion.cc  server.cc  thread.cc  vector3f.cc
edisondrone/src/sensors/: lsm9ds0.cc
ext/googletest/: CMakeLists.txt
ext/mraa/: CMakeLists.txt
simulator/: edisondrone-simulator-img  estimation_freq_response.cc  simulator.gnuplot  wave_generator.cc  wave_generator.h
test/: gtest-all.cc  gtest-drone.cc  gtest-imu.cc  gtest-periodic-thread.cc  gtest-quaternion.cc  gtest-sensor-listener.cc  gtest-server.cc  gtest-thread.cc
test/sensors/: gtest-lsm9ds0.cc
